[package]
name = "erc20_exex_tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
reth = { git = "https://github.com/paradigmxyz/reth.git" }
reth-exex = { git = "https://github.com/paradigmxyz/reth.git" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth.git" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth.git" }
eyre = "0.6"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
alloy = { version = "1.0.23", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite"] }
